argo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: product-service
  namespace: adidas
  labels:
    app: product-service
spec:
  strategy:
    canary:
      analysis:
        templates:
          # name of AnalysisTemplate
          - templateName: success-rate
        # When it begins (after the 1-minute pause)
        startingStep: 2
        args:
          - name: service-name
            # name of the canary service (used in prometheus to find the correct metrics)
            value: product-service-canary.adidas.svc.cluster.local
      steps:
        - setWeight: 20
        - pause:
            duration: "1m"
        - setWeight: 50
        - pause:
            duration: "2m"
      canaryService: product-service-canary
      stableService: product-service
      trafficRouting:
        istio:
          virtualService:
            name: product-service
            routes:
              - primary
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: product-service
      version: blue
  template:
    metadata:
      labels:
        app: product-service
        version: blue
    spec:
      containers:
        - name: product-service
          image: migueallende/product-service:sha-8e8e179
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
          resources:
            requests:
              memory: "250Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "450"
