argo/product-review.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-review
  namespace: adidas
spec:
  selector:
    matchLabels:
      app: product-review
  template:
    metadata:
      labels:
        app: product-review
    spec:
      containers:
      - image: nginx:latest
        name: product-review
        ports:
        - containerPort: 8082
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: product-review
  namespace: adidas
spec:
  selector:
    app: product-review
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
      name: http
