argo/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver
  namespace: adidas
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: echoserver
  template:
    metadata:
      labels:
        app: echoserver
    selector:
      matchLabels:
        app.kubernetes.io/name: echoserver
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.0
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: adidas
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: echoserver
